--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             clear: both;
         }
     </style>
-    <title>Insert Game</title>
+    <title>Insert Name</title>
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
   
     <Center>
